--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
 <h1>Welcome to Title Case</h1>
-<form action="/title">
+<form action="/scrabblepoints">
   <div class="form-group">
-     <label for="title">What would you like to see in title case?
+     <label for="points">How many scrabble points is your word worth?
 </label>
-     <input id="title" name="title" class="form-control" type="text">
+     <input id="points" name="points" class="form-control" type="text">
   </div>
   <button type="submit" class="btn-success">Send</button>
 </form>
